2016-05-07 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* add LOWPT muon SF uncertainties
	* add protection to truthOrigin and truthType definitions
	* add truthOrigin and truthType for leptons after OLR

2016-05-03 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* updated b-tagging WP cuts for 20.7, add 60 and 85% nBjet variables
	* undo recommended TTVA cuts for loose leptons to loose ones
	* add mc15c PU RW file and updated config file for mc15c

2016-05-03 David Hohn <david.hohn@cern.ch>
	* add 20.7 repocessed data file list
	* small bugfix in ProductionManager

2016-05-02 David Hohn <david.hohn@cern.ch>
	* protect against vtx not having x/y coordinates in topq1 derivation
	* fix dependency compilation error

2016-05-01 David Hohn <david.hohn@cern.ch>
	* add electron_sharesTrk for offline el/mu overlap removal a la ASG, should be double checked

2016-04-29 David Hohn <david.hohn@cern.ch>
	* Move to Top,2.3.49: possibly last release for 20.1
	* Add Number of tracks in vertex: m_vtx_numTrk
	* use pileup reweighting tool from TopToolStore
	* add cut on presence of primary vertex for data
	* use recommended TTVA cuts for loose leptons also

2016-04-28 Peter Onyisi <ponyisi@cern.ch>
	* Save indices of jets passing OR (selected_jets, selected_jets_T)
	* Save trigger efficiencies (I think)

2016-04-04 David Hohn <david.hohn@cern.ch>
	* bugfix triggermatching special case for electrons

2016-03-29 David Hohn <david.hohn@cern.ch>
	* bugfix for reading the sumWeights TTree

2016-03-29 David Hohn <david.hohn@cern.ch>
	* add 2nd flat tau, add flat tau E
	* add all vertices as vector branches and primary vertex also flat
	* add d0, z0, vz, deltaz0 for flat leptons and vector leptons
	* deltaz0 and deltaz0sintheta are signed again
	* overwrite Count histogram content if running skimmed MC with sumWeights info
	* tag ttHMultiAna-00-01-06

2016-03-28 David Hohn <david.hohn@cern.ch>
	* update JVT cut to use detector eta